--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 body {
     background-color: #111111;
@@ -16,11 +17,38 @@ h2 {
 }
 
 .eid-mubarak-one h2 {
-    animation-name: eid-round;
-    animation-timing-function: linear;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
+    -webkit-animation-name: eid-round;
+            animation-name: eid-round;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    -webkit-animation-duration: 10s;
+            animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
     position: absolute;
+}
+
+@-webkit-keyframes eid-round {
+    0% {
+        left: 0%;
+        top: 0%;
+    }
+    25% {
+        left: 63%;
+        top: 0%;
+    }
+    50% {
+        left: 60%;
+        top: 85%;
+    }
+    75% {
+        left: 0%;
+        top: 80%;
+    }
+    100% {
+        left: 0%;
+        top: 0%;
+    }
 }
 
 @keyframes eid-round {
@@ -50,7 +78,9 @@ h2 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 .eid-mubarak-two img {
